@@ -49,7 +49,7 @@ sub main {
       dbPass         => undef,
       dbPort         => undef,
       dbUser         => 'op',
-      memcachedHosts => [ '127.0.0.1:31337', ],
+      memcachedHosts => [ '127.0.0.1:11211', ],
       rcsBindir      => '/usr/bin',
       rcsDir         => 'RCS',
     };
