@@ -1,5 +1,7 @@
 .404
   - Update documentation for usage under mod_perl (thx rrose)
+  - Use default memcached port by uh, default.
+  - Remove Time::Piece as dependency
 
 .403
   - Modify die() handler to not hork on non-Error objects
